--- a/Spotify.ipynb
+++ b/Spotify.ipynb
@@ -4588,8 +4588,8 @@
    "outputs": [],
    "source": [
     "# save your IDs from new project in Spotify Developer Dashboard\n",
-    "CLIENT_ID = 'e2988f1ddb9145a5903fc594f0af3762'\n",
-    "CLIENT_SECRET = 'cd522c73d3304c6e812e685af3b559aa'"
+    "CLIENT_ID = '----'\n",
+    "CLIENT_SECRET = '----'"
    ]
   },
   {
