--- a/Spotify.ipynb
+++ b/Spotify.ipynb
@@ -5144,10 +5144,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_tableau.to_csv('MySpotifyDataTable.csv')\n",
-    "df_genre_expanded.to_csv('GenresExpandedTable.csv')\n",
-    "\n",
-    "df_stream.t\n",
+    "df_stream.to_csv('C:/Users/n/Downloads/df_stream.csv')\n",
+    "df_library.to_csv('C:/Users/n/Downloads/df_library.csv')\n",
+    "df_genre_expanded.to_csv('C:/Users/n/Downloads/df_genre_expanded.csv')\n",
     "\n",
     "print('done')"
    ]
